<resources>
    <string name="app_name" translatable="false">PanicPause</string>
    <string name="in_development">В разработке</string>
    <string name="welcome_to">Добро пожаловать в</string>
    <string name="log_in_page">Вход</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_passw"><b><u>Забыли пароль?</u></b></string>
    <string name="log_in">Войти</string>
    <string name="log_in_underline"><u>Войти</u></string>
    <string name="frst_time_here">Впервые в PanicPause?</string>
    <string name="create_acc">Создать учётную запись</string>
    <string name="create_acc_underline"><u>Создать учётную запись</u></string>
    <string name="sign_in_page">Регистрация</string>
    <string name="create_passw">Придумайте пароль</string>
    <string name="repeat_passw">Повторите пароль</string>
    <string name="passws_not_same">Пароли не совпадают</string>
    <string name="has_signed_in">Уже есть учётная запись?</string>
    <string name="or">или:</string>
    <string name="log_in_as_guest">Войти как гость</string>
    <string name="passw_reset_page">Восстановление пароля</string>
    <string name="create_new_passw">Придумайте новый пароль</string>
    <string name="reset_passw">Сбросить пароль</string>
    <string name="cancel">Отмена</string>
    <string name="enter_all">Заполните поля</string>
    <string name="enter_email">Введите пароль</string>
    <string name="enter_passw">Введите адрес электронной почты</string>
    <string name="passw_length">Длина пароля должна составлять минимум 8 символов</string>
    <string name="invalid_email">Введите корректный Email-адрес</string>
    <string name="user_email_exists">Аккаунт с таким Email уже существует</string>
    <string name="signin_error">Ошибка регистрации</string>
    <string name="user_create_error">Ошибка создания пользователя</string>
    <string name="user_data_saving_error">Не удалось сохранить данные пользователя</string>
    <string name="signin_success">Вы успешно зарегистрировались</string>
    <string name="login_error">Ошибка входа. Перепроверьте введённые данные</string>
    <string name="login_success">Вход выполнен успешно</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="invalid_passw_error">Неверный пароль</string>
    <string name="email_not_found">Пользователь с таким email не найден</string>
    <string name="invalid_email_error">Неверный формат email</string>
    <string name="invalid_auth_data">Неверные данные</string>
    <string name="network_error">Проблемы с интернет-соединением</string>
    <string name="an_error_occured">Произошла ошибка: </string>
    <string name="main">Главная</string>
    <string name="Im_panicking">Я чувствую панику</string>
    <string name="history">История</string>
    <string name="config_grounding">Настроить Заземление</string>
    <string name="useful_info">Полезная информация</string>
    <string name="whats_pa">Что такое паническая атака?</string>
    <string name="how_to_help_yourself">Как помочь себе?</string>
    <string name="whats_trigger">Что такое триггеры?</string>
    <string name="not_enough_photos">На данный момент в приложении <b>недостаточно безопасных фото</b> для вас.
        \n\nВы можете <b>отредактировать свой список триггеров</b> или запустить упражнения без фильтрации.
    </string>
    <string name="home_edit_triggers">Изменить список триггеров</string>
    <string name="start_ground_with_default_settings">Запустить упражнения без моих настроек</string>
    <string name="whats_pa_text"><b>Паническая атака</b> – приступ очень сильной тревоги,
        который сопровождается учащённым сердцебиением, нехваткой воздуха, головокружением,
        дрожью в руках и ногах и пр.; может возникать без видимой причины.
        \nПаническая атака является безопасной для здоровья, но очень неприятной в моменте проживания.
        \n\nСчитается, что паническую атаку хотя бы раз в жизни испытывало большинство людей –
        в моменты сильной тревоги или хронического стресса.
    </string>
    <string name="whats_trigger_text"><b>Три́ггер</b> —  сигнал, связанный каким-либо образом
        с определённым негативным опытом в жизни человека и вызывающий тяжёлые негативные эмоции.
        Например, для человека, пережившего автокатастрофу, триггером может стать вид салона машины.
        \n\nPanicPause также рекомендует заносить в “триггеры” объекты фобий.</string>
    <string name="history_item_info">Здесь вы можете добавить упражнение в <b>избранные</b>
        или занести определенные теги в <b>триггеры</b> (<b>x</b>).</string>
    <string name="ground_settings">Настройки Заземления</string>
    <string name="square_breathing_title">Дыхание по квадрату</string>
    <string name="sq_breathing_setting">Количество повторов, после которых появится кнопка Дальше</string>
    <string name="count_photo_title">Счёт предметов на изображении</string>
    <string name="count_photo_ex_amount">Количество упражнений</string>
    <string name="not_enough_safe_photos">В приложении недостаточно безопасных фото</string>
    <string name="count_photo_only_faves">Использовать только избранные</string>
    <string name="not_enough_faves">Недостаточно избранных</string>
    <string name="math_title">Математические примеры</string>
    <string name="include_math">Включать математические примеры</string>
    <string name="count_color_title">Поиск предметов вокруг себя</string>
    <string name="include_count_color">Включать поиск предметов вокруг</string>
    <string name="auto_ground_on_launch">Автоматически запускать Заземление при входе в приложение</string>
    <string name="reset_settings">Сбросить настройки</string>
    <string name="reset_settings_question">Вы уверены, что хотите <b>сбросить настройки?</b></string>
    <string name="no_ex_except_breath_warning">Вы уверены, что хотите <b>убрать все упражнения</b>, кроме
        "Дыхания по квадрату"?</string>
    <string name="yes">Да</string>
    <string name="no_edit_settings">Нет, изменить настройки</string>
    <string name="how_to_help_yourself_during_pa">Как помочь себе\nпережить панику?</string>
    <string name="during_pa">Во время панической атаки</string>
    <string name="during_pa_text1_title">1. Дыхание</string>
    <string name="during_pa_text1">\nВ первую  очередь нужно замедлить дыхание и сконцентрироваться на процессе,
        выравнивая ритм (так как во время панической атаки дыхание становится поверхностным).
        В этом помогают различные релаксационные дыхательные техники
        (дыхание по квадрату, на счёт и другие способы).</string>
    <string name="during_pa_text2_title">2. Мысли</string>
    <string name="during_pa_text2">\nСледующий шаг – контроль над мыслями. Их важно вернуть в более спокойное,
        поддерживающее русло, а также к неопровержимым фактам.
        \nПример тревожной мысли:Кажется, я сейчас упаду в обморок, это ужасно!
        \nЗамена мысли: Я чувствую панику, паника усиливает симптомы. Мне важно  сосредоточиться на дыхании,
        я дышу, паническая атака обязательно пройдёт.</string>
    <string name="during_pa_text3_title">3. Восприятие</string>
    <string name="during_pa_text3">\nТакже полезно переключиться на каналы восприятия (зрение, слух, тактильность):
        заметить в помещении предметы определённого цвета или просто назвать первые предметы, которые вы увидите;
        сосредоточиться на звуках, которые вы слышите; легко потянуть за пальцы на руке, сжать запястье,
        сжать и разжать кулаки,  ущипнуть (не сильно) за руку – внимание «уйдёт» на телесные ощущения.</string>
    <string name="during_pa_text4">По возможности также  важно позаботиться о безопасности –
        например, отойти от края платформы метро.</string>
    <string name="during_pa_text5"><b>Если вам не помогают вышеописанные действия - это нормально:
        каждый случай индивидуален!</b>
        По этой причине PanicPause предлагает персонализацию своего “Заземления”.
        \n\nСамое главное - помнить, что паника <b>всегда проходит.</b></string>
    <string name="how_to_help_yourself_afterwards">Как помочь себе в дальнейшем?</string>
    <string name="after_pa_text1_title">1.  Не избегать места, в которых у вас случилась паническая атака.</string>
    <string name="after_pa_text1">\nПри избегании происходит неосозонанное закрепление неприятного опыта к месту
        (например, «стало тревожно в автобусе – больше не буду ездить на автобусе»), что, в свою очередь,
        ведёт к множеству неудобств (зачастую через такие места необходимо проходить регулярно) и не влияет,
        а чаще - увеличивает риск возникновения и интенсивность панических атак.
        \nАльтернатива избеганию – информирование, принятие и проживание.</string>
    <string name="after_pa_text2_title">2. Психотерапия </string>
    <string name="after_pa_text2">\nОдним из ключевых методов при работе с систематическими паническими атаками
        считается когнитивно-поведенческая терапия.</string>
    <string name="selfhelp_conclusion_text">PanicPause помогает пережить момент панической атаки, однако приложение
        <b>не может</b> помочь с лечением панического расстройства.
        \n\nЕсли вы замечаете, что панические атаки у вас случаются регулярно, это повод обратиться к психотерапевту.
        \n\nВ терапии нет ничего страшного или постыдного;
        <b>мы рекомендуем обратиться к специалисту и позволить ему помочь вам.</b>
    </string>
    <string name="profile">Профиль</string>
    <string name="set_triggers">Обозначить триггеры</string>
    <string name="favorites">Избранные</string>
    <string name="account">Учётная запись</string>
    <string name="app_info">О приложении</string>
    <string name="first_time_welcome_msg">Добро пожаловать в PanicPause!
        \nДавайте <b>настроим</b> приложение под вас</string>
    <string name="guest">Гость</string>
    <string name="fav_exercises">Избранные упражнения</string>
    <string name="random_order">В случайном порядке</string>
    <string name="view_full_image">Просмотреть полное изображение</string>
    <string name="exercise_text">Текст упражнения</string>
    <string name="tags">Теги</string>
    <string name="delete_from_faves">Удалить из избранных</string>
    <string name="set_triggers_info1">В упражнениях приложения используются фотографии.
        Настоятельно рекомендуем выбрать сущности (предметы, животные и т. д.),
        которые вам <b>неприятны</b>. Изображения с ними будут <b>исключены</b> из вашей подборки.</string>
    <string name="set_triggers_info2">Вы можете изменять ваш выбор \nв любое время</string>
    <string name="tr_people">Люди</string>
    <string name="tr_men">Мужчины</string>
    <string name="tr_women">Женщины</string>
    <string name="tr_children">Дети</string>
    <string name="tr_animals">Животные</string>
    <string name="tr_birds">Птицы</string>
    <string name="tr_pigeons">Голуби</string>
    <string name="tr_parrots">Попугаи</string>
    <string name="tr_owls">Совы</string>
    <string name="tr_ducks">Утки</string>
    <string name="tr_cats">Кошки</string>
    <string name="tr_dogs">Собаки</string>
    <string name="tr_bunnies">Кролики</string>
    <string name="tr_guinea_pigs">Морские свинки</string>
    <string name="tr_capybaras">Капибары</string>
    <string name="tr_otters">Выдры</string>
    <string name="tr_raccoons">Еноты</string>
    <string name="tr_cheetahs">Гепарды</string>
    <string name="tr_cows">Коровы</string>
    <string name="tr_sheep">Овцы</string>
    <string name="tr_goats">Козы</string>
    <string name="tr_fish">Рыбы</string>
    <string name="tr_seals">Тюлени</string>
    <string name="tr_sea_lions">Морские львы</string>
    <string name="tr_food">Еда</string>
    <string name="tr_desserts">Сладости</string>
    <string name="tr_berries">Ягоды</string>
    <string name="tr_strawberries">Клубника</string>
    <string name="tr_blueberries">Черника</string>
</resources>