<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBeige"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:id="@+id/center_login_linlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="50dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                style="@style/normalTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:alpha="216"
                android:text="@string/welcome_to"
                android:textSize="24dp" />

            <TextView
                style="@style/PanicPauseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/normalTextGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/log_in_page" />

            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/et_dark_border"
                android:hint="@string/email"
                android:textColor="@color/colorDarkBlueish"
                android:textCursorDrawable="@null"
                />
            <!--Setting the android:textCursorDrawable attribute to @null should result in the use of android:textColor as the cursor color.-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="30dp"
                android:textColorHint="#A49E96"
                app:passwordToggleTint="#A49E96"
                app:hintEnabled="false"
                >
                <!--        app:hintEnabled="false" - убирает анимацию хинта при фокусе  -->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/et_dark_border"
                    android:hint="@string/password"
                    android:textColor="@color/colorDarkBlueish"
                    android:textCursorDrawable="@null"
                    android:inputType="textPassword"
                    android:id="@+id/login_passw_et"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
                android:id="@+id/login_passw_et"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:autofillHints="password"
                android:background="@drawable/et_dark_border"
                android:hint="@string/password"
                android:textColor="@color/colorDarkBlueish"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                />-->

            <TextView
                android:id="@+id/forgot_passw_tv"
                style="@style/normalTextGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/forgot_passw"
                />

            <Button
                android:id="@+id/log_in_btn"
                style="@style/normalTextLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/log_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/guest_btn_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    style="@style/normalTextGreen"
                    android:text="@string/or"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    android:background="@drawable/outlined_btn_shape"
                    style="@style/normalTextGreen"
                    android:textStyle="bold"
                    android:text="@string/log_in_as_guest"
                    android:id="@+id/log_in_as_guest_btn"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            >

            <TextView
                style="@style/normalTextGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frst_time_here" />

            <TextView
                android:id="@+id/create_acc_tv"
                style="@style/normalTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/create_acc_underline" />
        </LinearLayout>


    </LinearLayout>


    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/back_arrow_icon"
        android:scaleType="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:id="@+id/back_btn"
        android:contentDescription="Back Button"
        />

</RelativeLayout>