<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SelfHelpInfoActivity"
    tools:showIn="@layout/activity_self_help_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_arrow_icon"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:id="@+id/back_btn"
            android:contentDescription="Back Button"
            />

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text"
            />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            style="@style/normalTextDark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/how_to_help_yourself_during_pa"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="28dp"
            android:overScrollMode="ifContentScrolls"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    style="@style/normalTextDark"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="@string/during_pa"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_triangle_right"
                    android:contentDescription="small triangle"
                    android:rotation="90"
                    android:layout_marginStart="20dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="12dp"
                android:id="@+id/during_pa_expandable"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/normalTextDark"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="@string/during_pa_text1_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="30dp"
                    style="@style/normalTextDark"
                    android:textSize="14dp"
                    android:text="@string/during_pa_text1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/normalTextDark"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="@string/during_pa_text2_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    style="@style/normalTextDark"
                    android:textSize="14dp"
                    android:text="@string/during_pa_text2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/normalTextDark"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="@string/during_pa_text3_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    style="@style/normalTextDark"
                    android:textSize="14dp"
                    android:text="@string/during_pa_text3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    style="@style/normalTextDark"
                    android:textSize="14dp"
                    android:text="@string/during_pa_text4"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/normalTextDark"
                    android:textSize="16dp"
                    android:text="@string/during_pa_text5"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>